# fastio-lib

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: benchmark.cpp  example.cpp
include/fastio/: core.hpp  fastio.hpp  format.hpp  input.hpp  print.hpp
src/: format.cpp  io_utils.cpp
test/: test_basic.cpp
